# cs6120-assignments

./: .gitignore  README.md  block.py  bril_type.py  brili-gc.ts  brili-jit.ts  brili-trace.ts  cfg.py  dfa.py  dfa_framework.py  dominator.py  dot.py  dot_utils.py  node.py  requirements.txt  slow.sh  ssa.py  stitch_trace.py  utils.py
benchmarks/mem/: basic.bril
l2/rs/: Cargo.toml  is-decreasing.rs  mod.rs
lesson-tasks/l2/: count-terminators.rs
lesson-tasks/l2/is-decreasing/: Cargo.toml
lesson-tasks/l2/is-decreasing/src/: is-decreasing.rs
lesson-tasks/l2/num-terminators/: .gitignore  Cargo.toml
lesson-tasks/l2/num-terminators/src/: main.rs
lesson-tasks/l2/num-terminators/test/: eight-queens.out  float.out  is-decreasing.out  turnt.toml
lesson-tasks/l3/: blocks.py  dce.py  lvn.py  tdce.py  utils.py
lesson-tasks/l4/: blocks.py  bril_type.py  cfg.py  data_flow_analysis.py  node.py  utils.py
lesson_tasks/l11/: brench.toml  l11.md  results.csv
lesson_tasks/l12/: l12.md
lesson_tasks/l12/sample/: basic.bril
lesson_tasks/l12/traces/: basic-trace.txt
lesson_tasks/l13/: synth.py  tutorial.py
lesson_tasks/l13/sketches/: eq.txt  ge.txt  gt.txt  l13.md  le.txt  lt.txt  mod.txt  neq.txt  silly.txt
lesson_tasks/l3/: benchmark.toml  lvn.py  tdce.py
lesson_tasks/l3/test/: bril2json.sh
lesson_tasks/l4/: README.md  cfg.py  node.py
lesson_tasks/l4/dfa/: reaching_definitions.py
lesson_tasks/l4/utils/: clean-frames.py
lesson_tasks/l5/: small.bril  validate_dominators.py
lesson_tasks/l6/: basic.bril  repeat.bril
lesson_tasks/utils/: bril_type.py
(+825 files in other folders)
