[package]
name = "num-terminators"
version = "0.1.0"
edition = "2021"
authors = ["Justin Ngai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.4.1"
features = ["derive"]

[dependencies.bril-rs]
version = "0.1.0"
path = "../../bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]